# mining-types

./: README.md  pyproject.toml
src/mining_types/: __init__.py  attestation.py  batch.py  crypto.py  heartbeat.py  nonce.py  receipt.py  slashing.py
tests/: test_types.py
