[project]
name = "mining-types"
version = "0.1.0"
description = "Shared Pydantic data models for the Orogen network (RFC-0001..0005)."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Orogen" }]
dependencies = [
    "pydantic>=2.7,<3.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mining_types"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: prefer StrEnum (py3.11+). We use (str, Enum) for backward compat with the
# wire format used by Rust pallets (parity-scale-codec serializes str-Enum).
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
